# ejoy2d

./: CMakeLists.txt
lib/: ejoy2dgame.c  ejoy2dgame.h
